compiler/GrammarExpressionParser.py
# Generated from GrammarExpression.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GrammarExpressionParser ( Parser ):

    grammarFileName = "GrammarExpression.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'integer'", "'real'", "'string'", "'programa'", 
                     "'fimprog'", "'declare'", "'leia'", "'escreva'", "'se'", 
                     "'entao'", "'senao'", "'para'", "'enquanto'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "','", "'.'", "'('", "')'", "':='", "'{'", 
                     "'}'", "'+'", "'-'", "'*'", "'/'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "PROGRAM", "ENDPROG", "DECLARE", "READ", "WRITE", 
                      "IF", "THEN", "ELSE", "FOR", "WHILE", "RELOP", "TEXT", 
                      "NUM", "INT", "REAL", "ID", "COMMA", "DOT", "LPARENTHESIS", 
                      "RPARENTHESIS", "ASSIGN", "LCURLY", "RCURLY", "PLUS", 
                      "MINUS", "MULT", "DIV", "DQUOTE", "WS", "Unknown" ]

    RULE_programa = 0
    RULE_declara = 1
    RULE_type = 2
    RULE_varlist = 3
    RULE_bloco = 4
    RULE_cmd = 5
    RULE_cmdleitura = 6
    RULE_cmdescrita = 7
    RULE_cmdexpr = 8
    RULE_cmdif = 9
    RULE_cmdfor = 10
    RULE_cmdwhile = 11
    RULE_relexpr = 12
    RULE_expr = 13
    RULE_exprl = 14
    RULE_termo = 15
    RULE_termol = 16
    RULE_fator = 17

    ruleNames =  [ "programa", "declara", "type", "varlist", "bloco", "cmd", 
                   "cmdleitura", "cmdescrita", "cmdexpr", "cmdif", "cmdfor", 
                   "cmdwhile", "relexpr", "expr", "exprl", "termo", "termol", 
                   "fator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    PROGRAM=4
    ENDPROG=5
    DECLARE=6
    READ=7
    WRITE=8
    IF=9
    THEN=10
    ELSE=11
    FOR=12
    WHILE=13
    RELOP=14
    TEXT=15
    NUM=16
    INT=17
    REAL=18
    ID=19
    COMMA=20
    DOT=21
    LPARENTHESIS=22
    RPARENTHESIS=23
    ASSIGN=24
    LCURLY=25
    RCURLY=26
    PLUS=27
    MINUS=28
    MULT=29
    DIV=30
    DQUOTE=31
    WS=32
    Unknown=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(GrammarExpressionParser.PROGRAM, 0)

        def bloco(self):
            return self.getTypedRuleContext(GrammarExpressionParser.BlocoContext,0)


        def ENDPROG(self):
            return self.getToken(GrammarExpressionParser.ENDPROG, 0)

        def DOT(self):
            return self.getToken(GrammarExpressionParser.DOT, 0)

        def declara(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarExpressionParser.DeclaraContext)
            else:
                return self.getTypedRuleContext(GrammarExpressionParser.DeclaraContext,i)


        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

    def programa(self):

        localctx = GrammarExpressionParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(GrammarExpressionParser.PROGRAM)
            self.state = 38 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 37
                self.declara()
                self.state = 40 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0)):
                    break

            self.state = 42
            self.bloco()
            self.state = 43
            self.match(GrammarExpressionParser.ENDPROG)
            self.state = 44
            self.match(GrammarExpressionParser.DOT)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(GrammarExpressionParser.TypeContext,0)


        def varlist(self):
            return self.getTypedRuleContext(GrammarExpressionParser.VarlistContext,0)


        def DOT(self):
            return self.getToken(GrammarExpressionParser.DOT, 0)

        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_declara

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclara" ):
                listener.enterDeclara(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclara" ):
                listener.exitDeclara(self)




    def declara(self):

        localctx = GrammarExpressionParser.DeclaraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declara)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.type_()

            self.state = 49
            self.varlist()
            self.state = 50
            self.match(GrammarExpressionParser.DOT)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = GrammarExpressionParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type)
        try:
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.match(GrammarExpressionParser.T__0)

                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(GrammarExpressionParser.T__1)

                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.match(GrammarExpressionParser.T__2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarExpressionParser.ID)
            else:
                return self.getToken(GrammarExpressionParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarExpressionParser.COMMA)
            else:
                return self.getToken(GrammarExpressionParser.COMMA, i)

        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_varlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarlist" ):
                listener.enterVarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarlist" ):
                listener.exitVarlist(self)




    def varlist(self):

        localctx = GrammarExpressionParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(GrammarExpressionParser.ID)

            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 63
                self.match(GrammarExpressionParser.COMMA)
                self.state = 64
                self.match(GrammarExpressionParser.ID)

                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarExpressionParser.CmdContext)
            else:
                return self.getTypedRuleContext(GrammarExpressionParser.CmdContext,i)


        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)




    def bloco(self):

        localctx = GrammarExpressionParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 71
                self.cmd()
                self.state = 74 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 537472) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmdleitura(self):
            return self.getTypedRuleContext(GrammarExpressionParser.CmdleituraContext,0)


        def cmdescrita(self):
            return self.getTypedRuleContext(GrammarExpressionParser.CmdescritaContext,0)


        def cmdexpr(self):
            return self.getTypedRuleContext(GrammarExpressionParser.CmdexprContext,0)


        def DOT(self):
            return self.getToken(GrammarExpressionParser.DOT, 0)

        def cmdif(self):
            return self.getTypedRuleContext(GrammarExpressionParser.CmdifContext,0)


        def cmdfor(self):
            return self.getTypedRuleContext(GrammarExpressionParser.CmdforContext,0)


        def cmdwhile(self):
            return self.getTypedRuleContext(GrammarExpressionParser.CmdwhileContext,0)


        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmd" ):
                listener.enterCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmd" ):
                listener.exitCmd(self)




    def cmd(self):

        localctx = GrammarExpressionParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cmd)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.cmdleitura()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.cmdescrita()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.cmdexpr()
                self.state = 79
                self.match(GrammarExpressionParser.DOT)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 81
                self.cmdif()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 82
                self.cmdfor()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 6)
                self.state = 83
                self.cmdwhile()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdleituraContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(GrammarExpressionParser.READ, 0)

        def LPARENTHESIS(self):
            return self.getToken(GrammarExpressionParser.LPARENTHESIS, 0)

        def ID(self):
            return self.getToken(GrammarExpressionParser.ID, 0)

        def RPARENTHESIS(self):
            return self.getToken(GrammarExpressionParser.RPARENTHESIS, 0)

        def DOT(self):
            return self.getToken(GrammarExpressionParser.DOT, 0)

        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_cmdleitura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdleitura" ):
                listener.enterCmdleitura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdleitura" ):
                listener.exitCmdleitura(self)




    def cmdleitura(self):

        localctx = GrammarExpressionParser.CmdleituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cmdleitura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(GrammarExpressionParser.READ)
            self.state = 87
            self.match(GrammarExpressionParser.LPARENTHESIS)
            self.state = 88
            self.match(GrammarExpressionParser.ID)

            self.state = 90
            self.match(GrammarExpressionParser.RPARENTHESIS)
            self.state = 91
            self.match(GrammarExpressionParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdescritaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(GrammarExpressionParser.WRITE, 0)

        def LPARENTHESIS(self):
            return self.getToken(GrammarExpressionParser.LPARENTHESIS, 0)

        def RPARENTHESIS(self):
            return self.getToken(GrammarExpressionParser.RPARENTHESIS, 0)

        def DOT(self):
            return self.getToken(GrammarExpressionParser.DOT, 0)

        def TEXT(self):
            return self.getToken(GrammarExpressionParser.TEXT, 0)

        def ID(self):
            return self.getToken(GrammarExpressionParser.ID, 0)

        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_cmdescrita

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdescrita" ):
                listener.enterCmdescrita(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdescrita" ):
                listener.exitCmdescrita(self)




    def cmdescrita(self):

        localctx = GrammarExpressionParser.CmdescritaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_cmdescrita)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(GrammarExpressionParser.WRITE)
            self.state = 94
            self.match(GrammarExpressionParser.LPARENTHESIS)
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.state = 95
                self.match(GrammarExpressionParser.TEXT)

                pass
            elif token in [19]:
                self.state = 97
                self.match(GrammarExpressionParser.ID)

                pass
            else:
                raise NoViableAltException(self)

            self.state = 101
            self.match(GrammarExpressionParser.RPARENTHESIS)
            self.state = 102
            self.match(GrammarExpressionParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GrammarExpressionParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(GrammarExpressionParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(GrammarExpressionParser.ExprContext,0)


        def TEXT(self):
            return self.getToken(GrammarExpressionParser.TEXT, 0)

        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_cmdexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdexpr" ):
                listener.enterCmdexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdexpr" ):
                listener.exitCmdexpr(self)




    def cmdexpr(self):

        localctx = GrammarExpressionParser.CmdexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cmdexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(GrammarExpressionParser.ID)


            self.state = 107
            self.match(GrammarExpressionParser.ASSIGN)
            self.state = 113
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 19, 22]:
                self.state = 108
                self.expr()

                pass
            elif token in [15]:
                self.state = 111
                self.match(GrammarExpressionParser.TEXT)

                pass
            else:
                raise NoViableAltException(self)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(GrammarExpressionParser.IF, 0)

        def LPARENTHESIS(self):
            return self.getToken(GrammarExpressionParser.LPARENTHESIS, 0)

        def relexpr(self):
            return self.getTypedRuleContext(GrammarExpressionParser.RelexprContext,0)


        def RPARENTHESIS(self):
            return self.getToken(GrammarExpressionParser.RPARENTHESIS, 0)

        def THEN(self):
            return self.getToken(GrammarExpressionParser.THEN, 0)

        def LCURLY(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarExpressionParser.LCURLY)
            else:
                return self.getToken(GrammarExpressionParser.LCURLY, i)

        def bloco(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarExpressionParser.BlocoContext)
            else:
                return self.getTypedRuleContext(GrammarExpressionParser.BlocoContext,i)


        def RCURLY(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarExpressionParser.RCURLY)
            else:
                return self.getToken(GrammarExpressionParser.RCURLY, i)

        def ELSE(self):
            return self.getToken(GrammarExpressionParser.ELSE, 0)

        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_cmdif

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdif" ):
                listener.enterCmdif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdif" ):
                listener.exitCmdif(self)




    def cmdif(self):

        localctx = GrammarExpressionParser.CmdifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cmdif)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(GrammarExpressionParser.IF)

            self.state = 119
            self.match(GrammarExpressionParser.LPARENTHESIS)
            self.state = 120
            self.relexpr()
            self.state = 121
            self.match(GrammarExpressionParser.RPARENTHESIS)
            self.state = 122
            self.match(GrammarExpressionParser.THEN)
            self.state = 123
            self.match(GrammarExpressionParser.LCURLY)
            self.state = 124
            self.bloco()

            self.state = 126
            self.match(GrammarExpressionParser.RCURLY)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 127
                self.match(GrammarExpressionParser.ELSE)

                self.state = 129
                self.match(GrammarExpressionParser.LCURLY)
                self.state = 130
                self.bloco()
                self.state = 131
                self.match(GrammarExpressionParser.RCURLY)




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdforContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(GrammarExpressionParser.FOR, 0)

        def LPARENTHESIS(self):
            return self.getToken(GrammarExpressionParser.LPARENTHESIS, 0)

        def cmdexpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarExpressionParser.CmdexprContext)
            else:
                return self.getTypedRuleContext(GrammarExpressionParser.CmdexprContext,i)


        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(GrammarExpressionParser.DOT)
            else:
                return self.getToken(GrammarExpressionParser.DOT, i)

        def relexpr(self):
            return self.getTypedRuleContext(GrammarExpressionParser.RelexprContext,0)


        def RPARENTHESIS(self):
            return self.getToken(GrammarExpressionParser.RPARENTHESIS, 0)

        def LCURLY(self):
            return self.getToken(GrammarExpressionParser.LCURLY, 0)

        def bloco(self):
            return self.getTypedRuleContext(GrammarExpressionParser.BlocoContext,0)


        def RCURLY(self):
            return self.getToken(GrammarExpressionParser.RCURLY, 0)

        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_cmdfor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdfor" ):
                listener.enterCmdfor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdfor" ):
                listener.exitCmdfor(self)




    def cmdfor(self):

        localctx = GrammarExpressionParser.CmdforContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_cmdfor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(GrammarExpressionParser.FOR)

            self.state = 140
            self.match(GrammarExpressionParser.LPARENTHESIS)
            self.state = 141
            self.cmdexpr()

            self.state = 143
            self.match(GrammarExpressionParser.DOT)
            self.state = 144
            self.relexpr()

            self.state = 146
            self.match(GrammarExpressionParser.DOT)
            self.state = 147
            self.cmdexpr()

            self.state = 149
            self.match(GrammarExpressionParser.RPARENTHESIS)
            self.state = 150
            self.match(GrammarExpressionParser.LCURLY)
            self.state = 151
            self.bloco()
            self.state = 152
            self.match(GrammarExpressionParser.RCURLY)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdwhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(GrammarExpressionParser.WHILE, 0)

        def LPARENTHESIS(self):
            return self.getToken(GrammarExpressionParser.LPARENTHESIS, 0)

        def relexpr(self):
            return self.getTypedRuleContext(GrammarExpressionParser.RelexprContext,0)


        def RPARENTHESIS(self):
            return self.getToken(GrammarExpressionParser.RPARENTHESIS, 0)

        def LCURLY(self):
            return self.getToken(GrammarExpressionParser.LCURLY, 0)

        def bloco(self):
            return self.getTypedRuleContext(GrammarExpressionParser.BlocoContext,0)


        def RCURLY(self):
            return self.getToken(GrammarExpressionParser.RCURLY, 0)

        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_cmdwhile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCmdwhile" ):
                listener.enterCmdwhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCmdwhile" ):
                listener.exitCmdwhile(self)




    def cmdwhile(self):

        localctx = GrammarExpressionParser.CmdwhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_cmdwhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(GrammarExpressionParser.WHILE)

            self.state = 157
            self.match(GrammarExpressionParser.LPARENTHESIS)
            self.state = 158
            self.relexpr()
            self.state = 159
            self.match(GrammarExpressionParser.RPARENTHESIS)
            self.state = 160
            self.match(GrammarExpressionParser.LCURLY)
            self.state = 161
            self.bloco()

            self.state = 163
            self.match(GrammarExpressionParser.RCURLY)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GrammarExpressionParser.ExprContext)
            else:
                return self.getTypedRuleContext(GrammarExpressionParser.ExprContext,i)


        def RELOP(self):
            return self.getToken(GrammarExpressionParser.RELOP, 0)

        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_relexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelexpr" ):
                listener.enterRelexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelexpr" ):
                listener.exitRelexpr(self)




    def relexpr(self):

        localctx = GrammarExpressionParser.RelexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_relexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.expr()

            self.state = 169
            self.match(GrammarExpressionParser.RELOP)


            self.state = 172
            self.expr()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termo(self):
            return self.getTypedRuleContext(GrammarExpressionParser.TermoContext,0)


        def exprl(self):
            return self.getTypedRuleContext(GrammarExpressionParser.ExprlContext,0)


        def getRuleIndex(self):
            return GrammarExpressionParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):
